# fpso-manager-backend

./: .env-example  .gitignore  .prospector.yaml  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
common/: models.py  schemas.py
equipments/: api.py  models.py  schemas.py
equipments/migrations/: 0001_initial.py
equipments/tests/: test_api_equipments.py  test_model_equipament.py
fpso_manager/: api.py  asgi.py  settings.py  urls.py  wsgi.py
vessels/: api.py  models.py  schemas.py
vessels/migrations/: 0001_initial.py
vessels/tests/: test_api_vessel.py  test_api_vessel_equipaments.py  test_model_vessel.py
